# PyQt_GUI_for_video-based_VLM_inference

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt  video_inference_PyQt.py  video_stream_inference.py
