[project]
name = "video-vlm-gui"
version = "1.0.0"
description = "A PyQt GUI application for video-based inference using vision-language models (VLMs) and video editing with AI features like Grounded-SAM 2 object tracking."
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "accelerate==1.4.0",
    "av==14.4.0",
    "bitsandbytes==0.45.5",
    "datasets==3.6.0",
    "decord>=0.6.0",
    "deepspeed==0.17.1",
    "ffmpeg-progress-yield==1.0.3",
    "flash-attn==2.7.4.post1",
    "gdown==5.2.0",
    "gguf==0.17.1",
    "hf-transfer==0.1.9",
    "hf-xet==1.1.7",
    "huggingface-hub==0.30.2",
    "imageio==2.37.0",
    "imageio-ffmpeg==0.6.0",
    "liger-kernel==0.5.9",
    "ninja==1.11.1.4",
    "nltk==3.9.1",
    "num2words>=0.5.14",
    "numba==0.61.2",
    "numpy==2.2.6",
    "nvidia-ml-py==13.580.82",
    "opencv-python==4.12.0.88",
    "pandas==2.2.2",
    "pathlib==1.0.1",
    "peft==0.15.2",
    "protobuf==5.29.5",
    "pymupdf==1.26.3",
    "pyqt6==6.9.1",
    "pyqt6-qt6==6.9.1",
    "qwen-omni-utils==0.0.8",
    "qwen-vl-utils==0.0.11",
    "scikit-image==0.25.2",
    "setuptools>=80.9.0",
    "spacy==3.8.7",
    "spacy-legacy==3.0.12",
    "spacy-loggers==1.0.5",
    "supervision==0.26.1",
    "timm>=1.0.19",
    "torch==2.5.1",
    "torchaudio==2.5.1",
    "torchvision==0.20.1",
    "transformers==4.52.3",
    "triton==3.1.0",
    "trl==0.18.1",
]
